Make automatic spellcheck work after reloading a document

Summary:
When a document gets reloaded for whatever reason, automatic spellcheck
should be refreshed so as to re-process the document contents.

BUG: 408291
FIXED-IN: 5.61.0

Test Plan:
- Open a document - with a couple of misspelled words - in kate
- Enable "automatic spell checking"
- Reload the document
- The misspelled words in the document should be higlighted after reloading

Reviewers: #ktexteditor, cullmann, dhaumann

Reviewed By: #ktexteditor, dhaumann

Subscribers: sars, kde-frameworks-devel, kwrite-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D21940